# media-audit

./: .cspell.json  .gitattributes  .gitignore  .markdown-link-check.json  .markdownlint.yml  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  codecov.yml  coverage.xml  example-config.yaml  media-scan.html  mkdocs.yml  pyproject.toml  pytest.ini  test-config.yaml  test-multi.html  test-multi.yaml  test-scan.html  test_push.txt
.github/: actionlint.yaml
.github/actions/setup-ffmpeg/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/api/: cli.md  config.md  models.md  parsers.md  probe.md  reports.md  scanner.md  validator.md
docs/architecture/: components.md  data-flow.md  overview.md
docs/contributing/: guidelines.md  setup.md  testing.md
docs/getting-started/: arm-setup.md  configuration.md  installation.md  quick-start.md
docs/user-guide/: advanced.md  cache.md  patterns.md  reports.md  usage.md
src/media_audit/: __init__.py  __main__.py  cache.py  cli.py  config.py  logging.py  models.py  patterns.py  validator.py
src/media_audit/core/: __init__.py  enums.py  exceptions.py  models.py
src/media_audit/domain/: __init__.py
src/media_audit/domain/parsing/: __init__.py  base.py  movie.py  tv.py
src/media_audit/domain/patterns/: __init__.py  patterns.py
src/media_audit/domain/scanning/: scanner.py
src/media_audit/domain/validation/: __init__.py  validator.py
src/media_audit/infrastructure/: __init__.py
src/media_audit/infrastructure/cache/: __init__.py  cache.py
src/media_audit/infrastructure/config/: __init__.py  config.py
src/media_audit/infrastructure/probe/: __init__.py  ffprobe.py
src/media_audit/parsers/: __init__.py  base.py  movie.py  tv.py
src/media_audit/presentation/: __init__.py
src/media_audit/presentation/cli/: __init__.py  cli.py
src/media_audit/presentation/reports/: html.py  json.py
src/media_audit/probe/: __init__.py  ffprobe.py
src/media_audit/report/: __init__.py  html.py  json.py
src/media_audit/scanner/: __init__.py  config.py  core.py  discovery.py  processor.py  progress.py  progress_multi.py  results.py  scanner.py
src/media_audit/shared/: __init__.py  error_handler.py  logging.py  platform_utils.py
tests/: README.md  __init__.py  conftest.py  test_base_parser.py  test_cache.py  test_cli.py  test_config.py  test_ffprobe.py  test_integration.py  test_metadata_extraction.py  test_models.py  test_parsers.py  test_patterns.py  test_platform_utils.py  test_scanner.py  test_validator.py
tests/integration/: test_scanner.py
tests/unit/: test_models.py  test_patterns.py  test_scanner_config.py  test_scanner_discovery.py  test_scanner_results.py
tests/utils/: __init__.py  assertions.py  base.py  benchmarks.py  factories.py  fixtures.py  helpers.py  mocks.py
