[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-audit"
version = "0.1.0"
description = "CLI tool for auditing media libraries with beautiful HTML reports"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Media Audit Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "click>=8.2.1",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.6",
    "rich>=14.1.0",
    "pydantic>=2.11.7",
    "typing-extensions>=4.15.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
# Testing dependencies
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
]

# Linting and formatting
lint = [
    "ruff>=0.12.10",
]

# Type checking
typing = [
    "mypy>=1.17.1",
    "types-pyyaml>=6.0.12.20250822",
    "types-aiofiles>=24.1.0",
]

# Security scanning
security = [
    "bandit>=1.8.6",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.7.0",
]

# Pre-commit hooks
pre-commit = [
    "pre-commit>=4.3.0",
]

# Documentation
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.28.0",
    "mkdocs-mermaid2-plugin>=1.2.0",
    "pymdown-extensions>=10.13.0",
    "mkdocs-awesome-pages-plugin>=2.10.0",
]

# Development - includes everything
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
    "mypy>=1.17.1",
    "types-pyyaml>=6.0.12.20250822",
    "types-aiofiles>=24.1.0",
    "pre-commit>=4.3.0",
    "bandit>=1.8.6",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
media-audit = "media_audit.presentation.cli:main"

[project.urls]
Homepage = "https://github.com/beelzer/media-audit"
Issues = "https://github.com/beelzer/media-audit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/media_audit"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = ["E501"]  # line too long

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
enable_incomplete_feature = ["NewGenericSyntax"]

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiofiles.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["src/media_audit"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
